[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwava"
version = "0.0.5"
description = "Graviational Wave data plotter"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "matplotlib>=3.7", 
    "numpy>=1.24", 
    "pandas>=2.0", 
    "PyYAML>=6.0", 
    "requests>=2.31"
    ]

[project.scripts]
gwava = "gwava.cli:main"

