[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwava"
version = "0.0.1"
description = "Graviational Wave data plotter"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "matplotlib>=3.11.0", 
    "numpy>=2.5", 
    "pandas>=3.0.3", 
    "PyYAML>=6.0.3", 
    "requests>=2.34.2"
    ]

